cleaned code, added stream